# Comentia

./: .gitignore  .pylintrc  LICENSE.txt  QtComentia.py  README.md  comentia.py  marca_script.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
comentia-electron/: index.html  main.js  package.json  preload.js  renderer.js  styles.css
comentia-electron/backend/: comentia_electron.py
comentia-electron/icons/: icon.icns
comentia-electron/scripts/: extractor.py
qt_app/: config.py  main.py
src/comentia/: __init__.py  __main__.py  core.py  gui_tkinter.py
